k8s/applications/ai/openwebui/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: open-webui
spec:
  selector:
    app: open-webui
  ports:
    - name: http
      port: 8080
      targetPort: http
