k8s/applications/ai/openwebui/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui
  namespace: open-webui
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - chat.k8s.eudald.gr
  rules:
    - backendRefs:
        - name: open-webui
          port: 8080
